# weatherstation

./: .gitignore  LICENSE  README.md
project/: CMakeLists.txt  FreeRTOSConfig.h  expresslink.c  expresslink.h  expresslink_v2.c  expresslink_v2.h  gps_task.c  gps_task.h  i2c_semaphore.h  i2c_support.c  i2c_support.h  leds.h  main.c  pinmap.h  pressure_task.c  pressure_task.h  rain_task.c  rain_task.h  reporting_task.c  reporting_task.h  switch_inputs.pio  temperature_task.c  temperature_task.h  wind_task.c  wind_task.h
